--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -1,107 +1,105 @@
+@import url('https://fonts.googleapis.com/css2?family=Aboreto&family=Poiret+One&family=Special+Elite&display=swap');
+/*Misty Blue #81ABBC - Olive Green #4D5E38 - White #F1F3F3 - Puce #403A2C*/
+
 :root {
-  --max-width: 1100px;
-  --border-radius: 12px;
-  --font-mono: ui-monospace, Menlo, Monaco, 'Cascadia Mono', 'Segoe UI Mono',
-    'Roboto Mono', 'Oxygen Mono', 'Ubuntu Monospace', 'Source Code Pro',
-    'Fira Mono', 'Droid Sans Mono', 'Courier New', monospace;
+  --white: #fefefe;
+  --black: #031116;
+  --gray: #718e92;
+  --yellow: #e9a901;
+  --dyellow: #c77000;
+  --red:#D62F2F;
+  --dred:#6e0e00;
+  --blue: #00aab7;
+  --dblue: #006080;
+  --brown: #69402e;
+  --dbrown: #3c3429;
+  --green: #37c885;
+  --dgreen: #387b5c;
 
-  --foreground-rgb: 0, 0, 0;
-  --background-start-rgb: 214, 219, 220;
-  --background-end-rgb: 255, 255, 255;
-
-  --primary-glow: conic-gradient(
-    from 180deg at 50% 50%,
-    #16abff33 0deg,
-    #0885ff33 55deg,
-    #54d6ff33 120deg,
-    #0071ff33 160deg,
-    transparent 360deg
-  );
-  --secondary-glow: radial-gradient(
-    rgba(255, 255, 255, 1),
-    rgba(255, 255, 255, 0)
-  );
-
-  --tile-start-rgb: 239, 245, 249;
-  --tile-end-rgb: 228, 232, 233;
-  --tile-border: conic-gradient(
-    #00000080,
-    #00000040,
-    #00000030,
-    #00000020,
-    #00000010,
-    #00000010,
-    #00000080
-  );
-
-  --callout-rgb: 238, 240, 241;
-  --callout-border-rgb: 172, 175, 176;
-  --card-rgb: 180, 185, 188;
-  --card-border-rgb: 131, 134, 135;
 }
 
-@media (prefers-color-scheme: dark) {
-  :root {
-    --foreground-rgb: 255, 255, 255;
-    --background-start-rgb: 0, 0, 0;
-    --background-end-rgb: 0, 0, 0;
+.red {background-color: var(--red);}
+.dred {background-color: var(--dred);}
+.yellow {background-color: var(--yellow);}
+.dyellow {background-color: var(--dyellow);}
+.gray {background-color: var(--gray);}
+.blue {background-color: var(--blue);}
+.dblue {background-color: var(--dblue);}
+.brown {background-color: var(--brown);}
+.dbrown {background-color: var(--dbrown);}
+.green {background-color: var(--green);}
+.dgreen {background-color: var(--dgreen);}
+.white {background-color: var(--white);}
 
-    --primary-glow: radial-gradient(rgba(1, 65, 255, 0.4), rgba(1, 65, 255, 0));
-    --secondary-glow: linear-gradient(
-      to bottom right,
-      rgba(1, 65, 255, 0),
-      rgba(1, 65, 255, 0),
-      rgba(1, 65, 255, 0.3)
-    );
 
-    --tile-start-rgb: 2, 13, 46;
-    --tile-end-rgb: 2, 5, 19;
-    --tile-border: conic-gradient(
-      #ffffff80,
-      #ffffff40,
-      #ffffff30,
-      #ffffff20,
-      #ffffff10,
-      #ffffff10,
-      #ffffff80
-    );
+.redT {color: var(--red);}
+.dredT {color: var(--dred);}
+.yellowT {color: var(--yellow);}
+.dyellowT {color: var(--dyellow);}
+.grayT {color: var(--gray);}
+.blueT {color: var(--blue);}
+.dblueT {color: var(--dblue);}
+.brownT {color: var(--brown);}
+.dbrownT {color: var(--dbrown);}
+.greenT {color: var(--green);}
+.dgreenT {color: var(--dgreen);}
+.whiteT {color: var(--white);}
 
-    --callout-rgb: 20, 20, 20;
-    --callout-border-rgb: 108, 108, 108;
-    --card-rgb: 100, 100, 100;
-    --card-border-rgb: 200, 200, 200;
-  }
-}
+.t-elite{font-family: 'Special Elite', 'Courier New', Courier, monospace;}
+.t-abo{font-family: 'Aboreto', 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;}
 
-* {
-  box-sizing: border-box;
-  padding: 0;
-  margin: 0;
-}
-
-html,
-body {
-  max-width: 100vw;
-  overflow-x: hidden;
-}
+* {box-sizing: border-box;}
 
 body {
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
+  font-family: 'Poiret One', Arial, Helvetica, sans-serif;
+  background-color: var(--wite);
+  color: var(--black);
+  text-align: center;
 }
 
-a {
-  color: inherit;
-  text-decoration: none;
+h1,h2,h3,h4,h5,h6{font-family: 'Aboreto',Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;}
+h1{margin-top: 2vh;}
+
+a {color: inherit !important; text-decoration: none;}
+
+hr{color: var(--lgray);}
+
+button {width: 80%; color: inherit !important;}
+
+::placeholder {color: var(--white) !important; opacity: 1 !important;}
+:-ms-input-placeholder { color: var(--white) !important; }
+::-ms-input-placeholder { color: var(--white)  !important; }
+
+.shadow{
+  -webkit-box-shadow: 0px 0px 41px 31px var(--black) !important;
+  -moz-box-shadow: 0px 0px 41px 31px var(--black) !important;
+  box-shadow: 0px 0px 15px 0px var(--black) !important;
 }
 
-@media (prefers-color-scheme: dark) {
-  html {
-    color-scheme: dark;
-  }
+.shadowR{
+  -webkit-filter: drop-shadow(0px -5px 8px var(--black));
+  filter: drop-shadow(0px -5px 8px var(--black));
 }
+
+.lock-height{height: 100vh; overflow: hidden;}
+
+.bHome,.bScan{
+  position: fixed;
+  height: min-content;
+  width: min-content;
+  padding: 0px;
+ }
+ .bScan{ bottom: 4vw; left: 2vw ;}
+ .bHome{ bottom: 4vw; right: 2vw ;}
+
+ .bHome:focus, .bHome:active,.bScan:focus, .bScan:active, 
+ input:focus,.input:focus{outline: none !important; box-shadow: none !important; background-color: transparent !important;}
+
+ .bHome svg,.bScan svg{
+  background-color: rgba(225, 225, 225, 0.8);
+  height: 35px;
+  width: 35px;
+  border-radius: 5px;
+  border: 0.5px solid var(--white);
+ }
+.bScan svg{height: 45px; width: 45px;}
