--- a/src/styles/Home.module.css
+++ b/src/styles/Home.module.css
@@ -154,3 +154,26 @@
 
 .cardRoute:nth-child(2n) div p:nth-child(3){text-align: right;}
 .cardRoute:nth-child(2n+1) div p:nth-child(3){text-align: left;}
+
+.camera:after {
+  content: "";
+  background-image: url('../../public/scanQr.png');
+  background-size: contain;
+  background-repeat: no-repeat;
+  background-position: auto;
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 80%;
+  height: 90%;
+  margin: 5% 10%;
+  animation-name: pulsazione;
+  animation-duration: 3s;
+  animation-iteration-count: infinite;
+}
+
+@keyframes pulsazione {
+  0%   {transform: scale(0.9)}
+  50%  {transform: scale(1)}
+  100% {transform: scale(0.9)}
+}
