--- a/src/styles/Home.module.css
+++ b/src/styles/Home.module.css
@@ -155,6 +155,8 @@
 .cardRoute:nth-child(2n) div p:nth-child(3){text-align: right;}
 .cardRoute:nth-child(2n+1) div p:nth-child(3){text-align: left;}
 
+
+.camera {width: '100vw'; height: '100vh'}
 .camera:after {
   content: "";
   background-image: url('../../public/scanQr.png');
