--- a/src/styles/Home.module.css
+++ b/src/styles/Home.module.css
@@ -156,7 +156,7 @@
 .cardRoute:nth-child(2n+1) div p:nth-child(3){text-align: left;}
 
 
-.camera {width: '100vw'; height: '100vh'}
+.camera {width: '100vw' !important; height: '100vh' !important}
 .camera:after {
   content: "";
   background-image: url('../../public/scanQr.png');
