--- a/src/styles/Home.module.css
+++ b/src/styles/Home.module.css
@@ -156,14 +156,26 @@
 .cardRoute:nth-child(2n+1) div p:nth-child(3){text-align: left;}
 
 
-.camera {width: 100vw; height: 100vh}
-.camera>*{width: 100vw; height: 100vh}
+.camera {transform: scale(2);}
+.camera:before {
+  content: "";
+  background: rgb(0,0,0);
+  background: radial-gradient(circle, rgba(0,0,0,0) 11%, rgba(71,71,71,0.576291722743785) 72%, rgba(0,0,0,0.7163477451527486) 100%);
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  z-index: 1;
+}
+
 .camera:after {
   content: "";
   background-image: url('../../public/scanQr.png');
   background-size: contain;
   background-repeat: no-repeat;
   background-position: 50%;
+  z-index: 2;
   position: absolute;
   top: 0;
   left: 0;
