--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Aboreto&family=Poiret+One&family=Special+Elite&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Aboreto&family=Quicksand:wght@300;400&family=Special+Elite&display=swap');
 /*Misty Blue #81ABBC - Olive Green #4D5E38 - White #F1F3F3 - Puce #403A2C*/
 
 :root {
@@ -51,7 +51,8 @@
 * {box-sizing: border-box;}
 
 body {
-  font-family: 'Poiret One', Arial, Helvetica, sans-serif;
+  font-family: 'Quicksand', Arial, Helvetica, sans-serif;
+  font-weight: 300;
   background-color: var(--wite);
   color: var(--black);
   text-align: center;
