--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -51,7 +51,7 @@
 * {box-sizing: border-box;}
 
 body {
-  font-family: 'Quicksand', Arial, Helvetica, sans-serif;
+  font-family: 'Quicksand', Arial, Helvetica, sans-serif !important;
   font-weight: 300;
   background-color: var(--wite);
   color: var(--black);
