fix problem commit

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -52,11 +52,10 @@
 
 body {
   font-family: 'Quicksand', Arial, Helvetica, sans-serif !important;
-  font-weight: 300;
+  font-weight: 300 !important;
   background-color: var(--wite);
   color: var(--black);
   text-align: center;
-  margin: 0;
 }
 
 h1,h2,h3,h4,h5,h6{font-family: 'Aboreto',Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;}
