--- a/src/styles/Home.module.css
+++ b/src/styles/Home.module.css
@@ -10,10 +10,11 @@
    background-color:transparent; 
    border: 0; border-bottom: solid 0.5px ; border-radius: 0; 
    margin-top: 0;
+   border-radius: 5px;
   }
 
 .logo, .logoW{width: 40vw; margin: 2vh 30vw; position: relative; z-index: 2;}
-.logoW{position: fixed; left: 30vw;}
+.logoW{position: fixed; left: 0vw;}
 .form, .picCircle{
   width: 210vw;
   position: absolute;
