--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -56,6 +56,8 @@ body {
   background-color: var(--wite);
   color: var(--black);
   text-align: center !important;
+  min-height: 100vh;
+  min-height: -webkit-fill-available;
 }
 
 h1,h2,h3,h4,h5,h6{font-family: 'Aboreto',Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;}
