--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -91,6 +91,7 @@ button {width: 80%; color: inherit !important;}
   height: min-content;
   width: min-content;
   padding: 0px;
+  z-index: 2;
  }
  .bScan{ bottom: 4vw; left: 2vw ;}
  .bHome{ bottom: 4vw; right: 2vw ;}
@@ -162,9 +163,8 @@ button {width: 80%; color: inherit !important;}
 
 /*MAP*/
 .leaflet-container {
-  width: 100%;
-  height: 100vh;
-  z-index: 1;
+  width: 100vw;
+  height: 102vh;
 }
 .leaflet-container *{
   font-family: 'Special Elite', Arial, Helvetica, sans-serif !important;
