--- a/src/styles/Home.module.css
+++ b/src/styles/Home.module.css
@@ -6,11 +6,11 @@
   padding-bottom: 3vh;
 }
 .input{
-  width: 80%;
+   width: 80%;
    background-color:transparent; 
    border: 0; border-bottom: solid 0.5px ; border-radius: 0; 
    margin-top: 0;
-   border-radius: 5px;
+   color: var(--white) !important;
   }
 
 .logo, .logoW{width: 40vw; margin: 2vh 30vw; position: relative; z-index: 2;}
