--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -110,7 +110,7 @@ button {width: 80%; color: inherit !important; font-size: 18px;}
  }
 .bScan svg{height: 45px; width: 45px;}
 
-.toast{position: absolute; top:20px; z-index: 3;}
+.toast{position: absolute; top:20px; z-index: 3; width: 90vw; margin: auto 5vw;}
 
 /*CIRCLE*/
 .cyellow{
