--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -24,6 +24,7 @@
 .yellow {background-color: var(--yellow) !important;}
 .dyellow {background-color: var(--dyellow) !important;}
 .gray {background-color: var(--gray) !important;}
+.dgray {background-color: var(--dgray) !important;}
 .blue {background-color: var(--blue) !important;}
 .dblue {background-color: var(--dblue) !important;}
 .brown {background-color: var(--brown) !important;}
