--- a/src/styles/Home.module.css
+++ b/src/styles/Home.module.css
@@ -110,6 +110,7 @@
  .active{
   border-top-left-radius: 12px;
   border-bottom-left-radius: 12px;
+  margin-right: -2px;
  }
  .down{position: -webkit-sticky;
   position: sticky;
