--- a/src/styles/Home.module.css
+++ b/src/styles/Home.module.css
@@ -182,7 +182,7 @@
 .cardRoute:nth-child(2n+1) div p:nth-child(3){text-align: left;}
 
 
-.camera {height: inherit;}
+.camera {height: 100vh !important;}
 .camera>* {height: inherit; transform: scale(1.8);}
 .camera:before {
   content: "";
