--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -114,7 +114,7 @@ button {width: 80%; color: inherit !important; font-size: 18px;}
 .bBack svg{padding: 2px; height: 35px; width: 35px;}
 .bBack{ 
   position: fixed;
-  bottom: 0; right: 0 ; 
+  bottom: 0; left: 0 ; 
   width: 100vw;
   z-index: 5; display: flex; 
   border-radius: 5px;
@@ -185,4 +185,17 @@ button {width: 80%; color: inherit !important; font-size: 18px;}
 }
 .leaflet-container *{
   font-family: 'Special Elite', Arial, Helvetica, sans-serif !important;
+}
+
+/*PUZZLE*/
+.puzzle-container{
+  width: 90vw;
+  margin: 0 5vw;
+}
+.jigsaw-puzzle__piece{
+  filter: grayscale(50%);
+}  
+.jigsaw-puzzle__piece--solved {
+  filter: grayscale(0%);
+  border: none !important;
 }
