--- a/src/styles/Home.module.css
+++ b/src/styles/Home.module.css
@@ -8,11 +8,12 @@
 }
 .input{
    width: 80%;
-   background-color:transparent; 
+   background-color: var(--dgray); 
    border: 0; border-bottom: solid 0.5px ; border-radius: 0; 
    margin-top: 0;
    color: var(--white) !important;
-  }
+}
+.input:focus{background-color: var(--dgray);  color: var(--white) !important;box-shadow: none; }
 
 .logo {width: 25vw; height: auto; margin: 5vh 30vw; position: relative; z-index: 2;}
 .logoW{position: fixed; left: 0vw;}
